[package]
name = "beatloader-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
querystring = "1.1.0"
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.28.1", features = ["full"] }
serde = "1.0.163"
serde_json = "1.0.96"
size_format = "1.0.2"
discord-presence = "0.5.14"
indicatif = "0.17.3"
