[package]
name = "beatloader-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
querystring = "1.1.0"
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.28.1", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
size_format = "1.0.2"
indicatif = "0.17.3"
discord-rpc-client = "0.3.0"
futures = "0.3.28"
async-recursion = "1.0.4"
